# fakeroost

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  release.yml
bench/: .gitignore  run-make.sh  run.sh
bench/stat-loop/src/: main.rs
src/: error.rs  filter.rs  handlers.rs  lib.rs  main.rs  mem.rs  path.rs  supervisor.rs  table.rs  user_notif.rs
src/arch/: aarch64.rs  mod.rs  riscv64.rs  x86_64.rs
tests/: cli.rs
