[package]
name = "fakeroot-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A fakeroot implementation using ptrace + seccomp. Works under Docker's default seccomp profile and fakes ownership for static binaries."
repository = "https://github.com/koca-build/fakeroot-rs"
readme = "README.md"

[lib]
name = "fakeroot"
path = "src/lib.rs"

[[bin]]
name = "fakeroot-rs"
path = "src/main.rs"

[dependencies]
env_logger = "0.11.10"
libc = "0.2.186"
log = "0.4.33"
nix = { version = "0.31.3", features = ["fs", "ptrace", "signal", "uio"] }
seccompiler = "0.5.0"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.2.2"
tempfile = "3.27.0"
