[package]
name = "fakeroost"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A fakeroot implementation using ptrace + seccomp. Works under Docker's default seccomp profile and fakes ownership for static binaries."
repository = "https://github.com/koca-build/fakeroost"
readme = "README.md"
documentation = "https://docs.rs/fakeroost"
homepage = "https://github.com/koca-build/fakeroost"

[lib]
name = "fakeroost"
path = "src/lib.rs"

[[bin]]
name = "fakeroost"
path = "src/main.rs"

[dependencies]
libc = "0.2.186"
nix = { version = "0.31.3", features = ["fs", "ptrace", "signal", "uio"] }
seccompiler = "0.5.0"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.2.2"
tempfile = "3.27.0"
